finally decided how I want to do it, added skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <form action="/" id="myform">
+        <input type="button" value="">
+        <input type="button" value="">
+        <input type="button" value="">
+    </form>
     <div id="testid1">testid1
         <div id="testid2" class="testclass">testid2&class</div>
         <div id="testid4" class="testclass">testid4&class</div>
@@ -15,5 +20,6 @@
     <div id="testid3">testid3</div>
 </body>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="makeBelieve.js"></script>
 </html>
